# create-cmake-project

./: README.md  create-cmake-project
Templates/CMake/: CMakeLists.txt  HelloWindow.cpp  README.md  configuration.hpp.in  gitignore
